--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 .content {
   margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .wiki_search {
@@ -27,27 +28,56 @@
 .pagination {
   margin-top: 1rem;
   display: flex;
+  align-items: center;
 }
 
 .pagination__page {
   display: flex;
-  margin: 0 1rem;
-  border: 1px solid gray;
-  .page_now {
-    padding: 0.2rem;
-    border-right: 1px solid gray;
-  }
-
-  .page_all {
-    padding: 0.2rem;
-  }
+  margin: 0 2.4rem;
 }
 
-.left-pagination {
-
+.right_pagination:after,
+.left_pagination:before {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%) rotate(-45deg);
+  width: 10px;
+  height: 10px;
+  border-left: 3px solid black;
+  border-top: 3px solid black;
 }
 
+.left_pagination:before {
+  left: 9px;
+}
+
+.right_pagination:after {
+  margin-left: -10px;
+  transform: translateY(-50%) rotate(135deg);
+  right: 9px;
+}
+
+.left_pagination,
 .right_pagination {
-
+  padding: 0.5rem 1rem;
+  position: relative;
+  border: 1px solid black;
 }
+
+.left_pagination {
+  padding-left: 1.8rem;
+}
+
+.right_pagination, {
+  padding-right: 1.8rem;
+}
+
+.right_pagination:hover,
+.left_pagination:hover {
+  cursor: pointer;
+}
+
+
 
